--- a/SimpleAudioPlayer/res/values/strings.xml
+++ b/SimpleAudioPlayer/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">SimpleAudioPlayer</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="song_title">Mozart.mp3</string>
 
 </resources>
