unused android:id removed; SeekBar for volume control added

--- a/SimpleAudioPlayer/res/values/strings.xml
+++ b/SimpleAudioPlayer/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="song_title">Mozart.mp3</string>
     <string name="status">Status:</string>
+    <string name="volume">Volume:</string>
 
     <string name="status_textview_idle">Idle</string>
     <string name="status_textview_playing">Playing</string>
